# local-agent-relay

./: .gitignore  README.md
configs/pipelines/: backend.yaml  demo.yaml  unity.yaml  web.yaml
docs/: architecture.md  model-notes.md  mvp.md
services/control-plane/: README.md  pyproject.toml
services/control-plane/app/: __init__.py  config.py  dashboard.py  db.py  executors.py  gemma.py  main.py  notifiers.py  orchestrator.py  pipelines.py  reporter.py  repository.py  schemas.py  validators.py
services/control-plane/tests/: test_api.py  test_gemma.py  test_image.py  test_notify.py  test_pipelines.py  test_report.py  test_validate.py
