[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-agent-relay-control-plane"
version = "0.1.0"
description = "Local Agent Relay control-plane backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
]

[project.scripts]
local-agent-relay-api = "app.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

